stringtime/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    A
    TODAY
    YEAR

Grammar

Rule 0     S' -> date_object
Rule 1     date_object -> <empty>
Rule 2     date_object -> date_list
Rule 3     date_list -> date_list date
Rule 4     date_list -> date
Rule 5     date_list -> date_past
Rule 6     date_list -> in
Rule 7     date_list -> adder
Rule 8     date_list -> remover
Rule 9     date_list -> date_yesterday
Rule 10    date_list -> date_2moro
Rule 11    date_list -> date_day
Rule 12    date_list -> date_end
Rule 13    date_list -> date_or
Rule 14    date_list -> date_before_yesterday
Rule 15    date_list -> date_after_tomorrow
Rule 16    date_list -> date_twice
Rule 17    date_list -> timestamp
Rule 18    date_list -> timestamp_adpt
Rule 19    timestamp -> NUMBER COLON NUMBER
Rule 20    timestamp -> NUMBER COLON NUMBER COLON NUMBER
Rule 21    timestamp_adpt -> timestamp AM
Rule 22    timestamp_adpt -> timestamp PM
Rule 23    timestamp_adpt -> AT timestamp
Rule 24    timestamp_adpt -> AT timestamp PM
Rule 25    timestamp_adpt -> AT timestamp AM
Rule 26    date -> NUMBER
Rule 27    date -> WORD_NUMBER
Rule 28    date -> AT NUMBER
Rule 29    date -> AT WORD_NUMBER
Rule 30    date -> TIME
Rule 31    date -> NUMBER TIME
Rule 32    date -> NUMBER AM
Rule 33    date -> NUMBER PM
Rule 34    date -> AT NUMBER AM
Rule 35    date -> AT NUMBER PM
Rule 36    date -> WORD_NUMBER TIME
Rule 37    date -> PHRASE TIME
Rule 38    date -> TIME PHRASE
Rule 39    date -> NUMBER TIME PHRASE
Rule 40    date -> WORD_NUMBER TIME PHRASE
Rule 41    date -> PHRASE TIME PHRASE
Rule 42    date -> PHRASE TIME AND NUMBER TIME
Rule 43    date -> PHRASE TIME AND WORD_NUMBER TIME
Rule 44    date -> NUMBER TIME AND NUMBER TIME PHRASE
Rule 45    date -> NUMBER TIME AND WORD_NUMBER TIME PHRASE
Rule 46    date -> WORD_NUMBER TIME AND NUMBER TIME PHRASE
Rule 47    date -> WORD_NUMBER TIME AND WORD_NUMBER TIME PHRASE
Rule 48    date_twice -> date date
Rule 49    date_twice -> date_day date
Rule 50    date_twice -> date date_day
Rule 51    date_twice -> timestamp_adpt date_day
Rule 52    in -> PHRASE NUMBER TIME
Rule 53    in -> PHRASE WORD_NUMBER TIME
Rule 54    in -> PHRASE NUMBER TIME AND NUMBER TIME
Rule 55    in -> PHRASE WORD_NUMBER TIME AND NUMBER TIME
Rule 56    in -> PHRASE NUMBER TIME AND WORD_NUMBER TIME
Rule 57    in -> PHRASE WORD_NUMBER TIME AND WORD_NUMBER TIME
Rule 58    adder -> PLUS NUMBER TIME
Rule 59    adder -> PLUS WORD_NUMBER TIME
Rule 60    adder -> PLUS NUMBER TIME AND NUMBER TIME
Rule 61    adder -> PLUS WORD_NUMBER TIME AND NUMBER TIME
Rule 62    adder -> PLUS NUMBER TIME AND WORD_NUMBER TIME
Rule 63    adder -> PLUS WORD_NUMBER TIME AND WORD_NUMBER TIME
Rule 64    remover -> MINUS NUMBER TIME
Rule 65    remover -> MINUS WORD_NUMBER TIME
Rule 66    remover -> MINUS NUMBER TIME AND NUMBER TIME
Rule 67    remover -> MINUS WORD_NUMBER TIME AND NUMBER TIME
Rule 68    remover -> MINUS NUMBER TIME AND WORD_NUMBER TIME
Rule 69    remover -> MINUS WORD_NUMBER TIME AND WORD_NUMBER TIME
Rule 70    date_past -> NUMBER TIME PAST_PHRASE
Rule 71    date_past -> WORD_NUMBER TIME PAST_PHRASE
Rule 72    date_past -> NUMBER TIME AND NUMBER TIME PAST_PHRASE
Rule 73    date_past -> WORD_NUMBER TIME AND NUMBER TIME PAST_PHRASE
Rule 74    date_past -> NUMBER TIME AND WORD_NUMBER TIME PAST_PHRASE
Rule 75    date_past -> WORD_NUMBER TIME AND WORD_NUMBER TIME PAST_PHRASE
Rule 76    date_yesterday -> YESTERDAY
Rule 77    date_yesterday -> YESTERDAY AT NUMBER
Rule 78    date_yesterday -> YESTERDAY AT WORD_NUMBER
Rule 79    date_2moro -> TOMORROW
Rule 80    date_2moro -> TOMORROW AT NUMBER
Rule 81    date_2moro -> TOMORROW AT WORD_NUMBER
Rule 82    date_day -> DAY
Rule 83    date_day -> ON DAY
Rule 84    date_day -> PHRASE DAY
Rule 85    date_day -> PAST_PHRASE DAY
Rule 86    date_or -> PAST_PHRASE TIME
Rule 87    date_before_yesterday -> BEFORE_YESTERDAY
Rule 88    date_before_yesterday -> THE BEFORE_YESTERDAY
Rule 89    date_before_yesterday -> THE TIME BEFORE_YESTERDAY
Rule 90    date_after_tomorrow -> AFTER_TOMORROW
Rule 91    date_after_tomorrow -> THE TIME AFTER_TOMORROW
Rule 92    date_end -> NUMBER DATE_END
Rule 93    date_end -> THE NUMBER DATE_END
Rule 94    date_end -> MONTH NUMBER DATE_END
Rule 95    date_end -> NUMBER DATE_END OF MONTH
Rule 96    date_end -> ON THE NUMBER DATE_END
Rule 97    date_end -> MONTH THE NUMBER DATE_END
Rule 98    date_end -> THE NUMBER DATE_END OF MONTH

Terminals, with rules where they appear

A                    : 
AFTER_TOMORROW       : 90 91
AM                   : 21 25 32 34
AND                  : 42 43 44 45 46 47 54 55 56 57 60 61 62 63 66 67 68 69 72 73 74 75
AT                   : 23 24 25 28 29 34 35 77 78 80 81
BEFORE_YESTERDAY     : 87 88 89
COLON                : 19 20 20
DATE_END             : 92 93 94 95 96 97 98
DAY                  : 82 83 84 85
MINUS                : 64 65 66 67 68 69
MONTH                : 94 95 97 98
NUMBER               : 19 19 20 20 20 26 28 31 32 33 34 35 39 42 44 44 45 46 52 54 54 55 56 58 60 60 61 62 64 66 66 67 68 70 72 72 73 74 77 80 92 93 94 95 96 97 98
OF                   : 95 98
ON                   : 83 96
PAST_PHRASE          : 70 71 72 73 74 75 85 86
PHRASE               : 37 38 39 40 41 41 42 43 44 45 46 47 52 53 54 55 56 57 84
PLUS                 : 58 59 60 61 62 63
PM                   : 22 24 33 35
THE                  : 88 89 91 93 96 97 98
TIME                 : 30 31 36 37 38 39 40 41 42 42 43 43 44 44 45 45 46 46 47 47 52 53 54 54 55 55 56 56 57 57 58 59 60 60 61 61 62 62 63 63 64 65 66 66 67 67 68 68 69 69 70 71 72 72 73 73 74 74 75 75 86 89 91
TODAY                : 
TOMORROW             : 79 80 81
WORD_NUMBER          : 27 29 36 40 43 45 46 47 47 53 55 56 57 57 59 61 62 63 63 65 67 68 69 69 71 73 74 75 75 78 81
YEAR                 : 
YESTERDAY            : 76 77 78
error                : 

Nonterminals, with rules where they appear

adder                : 7
date                 : 3 4 48 48 49 50
date_2moro           : 10
date_after_tomorrow  : 15
date_before_yesterday : 14
date_day             : 11 49 50 51
date_end             : 12
date_list            : 2 3
date_object          : 0
date_or              : 13
date_past            : 5
date_twice           : 16
date_yesterday       : 9
in                   : 6
remover              : 8
timestamp            : 17 21 22 23 24 25
timestamp_adpt       : 18 51

Parsing method: LALR

state 0

    (0) S' -> . date_object
    (1) date_object -> .
    (2) date_object -> . date_list
    (3) date_list -> . date_list date
    (4) date_list -> . date
    (5) date_list -> . date_past
    (6) date_list -> . in
    (7) date_list -> . adder
    (8) date_list -> . remover
    (9) date_list -> . date_yesterday
    (10) date_list -> . date_2moro
    (11) date_list -> . date_day
    (12) date_list -> . date_end
    (13) date_list -> . date_or
    (14) date_list -> . date_before_yesterday
    (15) date_list -> . date_after_tomorrow
    (16) date_list -> . date_twice
    (17) date_list -> . timestamp
    (18) date_list -> . timestamp_adpt
    (26) date -> . NUMBER
    (27) date -> . WORD_NUMBER
    (28) date -> . AT NUMBER
    (29) date -> . AT WORD_NUMBER
    (30) date -> . TIME
    (31) date -> . NUMBER TIME
    (32) date -> . NUMBER AM
    (33) date -> . NUMBER PM
    (34) date -> . AT NUMBER AM
    (35) date -> . AT NUMBER PM
    (36) date -> . WORD_NUMBER TIME
    (37) date -> . PHRASE TIME
    (38) date -> . TIME PHRASE
    (39) date -> . NUMBER TIME PHRASE
    (40) date -> . WORD_NUMBER TIME PHRASE
    (41) date -> . PHRASE TIME PHRASE
    (42) date -> . PHRASE TIME AND NUMBER TIME
    (43) date -> . PHRASE TIME AND WORD_NUMBER TIME
    (44) date -> . NUMBER TIME AND NUMBER TIME PHRASE
    (45) date -> . NUMBER TIME AND WORD_NUMBER TIME PHRASE
    (46) date -> . WORD_NUMBER TIME AND NUMBER TIME PHRASE
    (47) date -> . WORD_NUMBER TIME AND WORD_NUMBER TIME PHRASE
    (70) date_past -> . NUMBER TIME PAST_PHRASE
    (71) date_past -> . WORD_NUMBER TIME PAST_PHRASE
    (72) date_past -> . NUMBER TIME AND NUMBER TIME PAST_PHRASE
    (73) date_past -> . WORD_NUMBER TIME AND NUMBER TIME PAST_PHRASE
    (74) date_past -> . NUMBER TIME AND WORD_NUMBER TIME PAST_PHRASE
    (75) date_past -> . WORD_NUMBER TIME AND WORD_NUMBER TIME PAST_PHRASE
    (52) in -> . PHRASE NUMBER TIME
    (53) in -> . PHRASE WORD_NUMBER TIME
    (54) in -> . PHRASE NUMBER TIME AND NUMBER TIME
    (55) in -> . PHRASE WORD_NUMBER TIME AND NUMBER TIME
    (56) in -> . PHRASE NUMBER TIME AND WORD_NUMBER TIME
    (57) in -> . PHRASE WORD_NUMBER TIME AND WORD_NUMBER TIME
    (58) adder -> . PLUS NUMBER TIME
    (59) adder -> . PLUS WORD_NUMBER TIME
    (60) adder -> . PLUS NUMBER TIME AND NUMBER TIME
    (61) adder -> . PLUS WORD_NUMBER TIME AND NUMBER TIME
    (62) adder -> . PLUS NUMBER TIME AND WORD_NUMBER TIME
    (63) adder -> . PLUS WORD_NUMBER TIME AND WORD_NUMBER TIME
    (64) remover -> . MINUS NUMBER TIME
    (65) remover -> . MINUS WORD_NUMBER TIME
    (66) remover -> . MINUS NUMBER TIME AND NUMBER TIME
    (67) remover -> . MINUS WORD_NUMBER TIME AND NUMBER TIME
    (68) remover -> . MINUS NUMBER TIME AND WORD_NUMBER TIME
    (69) remover -> . MINUS WORD_NUMBER TIME AND WORD_NUMBER TIME
    (76) date_yesterday -> . YESTERDAY
    (77) date_yesterday -> . YESTERDAY AT NUMBER
    (78) date_yesterday -> . YESTERDAY AT WORD_NUMBER
    (79) date_2moro -> . TOMORROW
    (80) date_2moro -> . TOMORROW AT NUMBER
    (81) date_2moro -> . TOMORROW AT WORD_NUMBER
    (82) date_day -> . DAY
    (83) date_day -> . ON DAY
    (84) date_day -> . PHRASE DAY
    (85) date_day -> . PAST_PHRASE DAY
    (92) date_end -> . NUMBER DATE_END
    (93) date_end -> . THE NUMBER DATE_END
    (94) date_end -> . MONTH NUMBER DATE_END
    (95) date_end -> . NUMBER DATE_END OF MONTH
    (96) date_end -> . ON THE NUMBER DATE_END
    (97) date_end -> . MONTH THE NUMBER DATE_END
    (98) date_end -> . THE NUMBER DATE_END OF MONTH
    (86) date_or -> . PAST_PHRASE TIME
    (87) date_before_yesterday -> . BEFORE_YESTERDAY
    (88) date_before_yesterday -> . THE BEFORE_YESTERDAY
    (89) date_before_yesterday -> . THE TIME BEFORE_YESTERDAY
    (90) date_after_tomorrow -> . AFTER_TOMORROW
    (91) date_after_tomorrow -> . THE TIME AFTER_TOMORROW
    (48) date_twice -> . date date
    (49) date_twice -> . date_day date
    (50) date_twice -> . date date_day
    (51) date_twice -> . timestamp_adpt date_day
    (19) timestamp -> . NUMBER COLON NUMBER
    (20) timestamp -> . NUMBER COLON NUMBER COLON NUMBER
    (21) timestamp_adpt -> . timestamp AM
    (22) timestamp_adpt -> . timestamp PM
    (23) timestamp_adpt -> . AT timestamp
    (24) timestamp_adpt -> . AT timestamp PM
    (25) timestamp_adpt -> . AT timestamp AM

    $end            reduce using rule 1 (date_object -> .)
    NUMBER          shift and go to state 18
    WORD_NUMBER     shift and go to state 19
    AT              shift and go to state 20
    TIME            shift and go to state 21
    PHRASE          shift and go to state 22
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    YESTERDAY       shift and go to state 26
    TOMORROW        shift and go to state 27
    DAY             shift and go to state 28
    ON              shift and go to state 29
    PAST_PHRASE     shift and go to state 23
    THE             shift and go to state 30
    MONTH           shift and go to state 31
    BEFORE_YESTERDAY shift and go to state 32
    AFTER_TOMORROW  shift and go to state 33

    date_object                    shift and go to state 1
    date_list                      shift and go to state 2
    date                           shift and go to state 3
    date_past                      shift and go to state 4
    in                             shift and go to state 5
    adder                          shift and go to state 6
    remover                        shift and go to state 7
    date_yesterday                 shift and go to state 8
    date_2moro                     shift and go to state 9
    date_day                       shift and go to state 10
    date_end                       shift and go to state 11
    date_or                        shift and go to state 12
    date_before_yesterday          shift and go to state 13
    date_after_tomorrow            shift and go to state 14
    date_twice                     shift and go to state 15
    timestamp                      shift and go to state 16
    timestamp_adpt                 shift and go to state 17

state 1

    (0) S' -> date_object .



state 2

    (2) date_object -> date_list .
    (3) date_list -> date_list . date
    (26) date -> . NUMBER
    (27) date -> . WORD_NUMBER
    (28) date -> . AT NUMBER
    (29) date -> . AT WORD_NUMBER
    (30) date -> . TIME
    (31) date -> . NUMBER TIME
    (32) date -> . NUMBER AM
    (33) date -> . NUMBER PM
    (34) date -> . AT NUMBER AM
    (35) date -> . AT NUMBER PM
    (36) date -> . WORD_NUMBER TIME
    (37) date -> . PHRASE TIME
    (38) date -> . TIME PHRASE
    (39) date -> . NUMBER TIME PHRASE
    (40) date -> . WORD_NUMBER TIME PHRASE
    (41) date -> . PHRASE TIME PHRASE
    (42) date -> . PHRASE TIME AND NUMBER TIME
    (43) date -> . PHRASE TIME AND WORD_NUMBER TIME
    (44) date -> . NUMBER TIME AND NUMBER TIME PHRASE
    (45) date -> . NUMBER TIME AND WORD_NUMBER TIME PHRASE
    (46) date -> . WORD_NUMBER TIME AND NUMBER TIME PHRASE
    (47) date -> . WORD_NUMBER TIME AND WORD_NUMBER TIME PHRASE

    $end            reduce using rule 2 (date_object -> date_list .)
    NUMBER          shift and go to state 35
    WORD_NUMBER     shift and go to state 36
    AT              shift and go to state 37
    TIME            shift and go to state 21
    PHRASE          shift and go to state 38

    date                           shift and go to state 34

state 3

    (4) date_list -> date .
    (48) date_twice -> date . date
    (50) date_twice -> date . date_day
    (26) date -> . NUMBER
    (27) date -> . WORD_NUMBER
    (28) date -> . AT NUMBER
    (29) date -> . AT WORD_NUMBER
    (30) date -> . TIME
    (31) date -> . NUMBER TIME
    (32) date -> . NUMBER AM
    (33) date -> . NUMBER PM
    (34) date -> . AT NUMBER AM
    (35) date -> . AT NUMBER PM
    (36) date -> . WORD_NUMBER TIME
    (37) date -> . PHRASE TIME
    (38) date -> . TIME PHRASE
    (39) date -> . NUMBER TIME PHRASE
    (40) date -> . WORD_NUMBER TIME PHRASE
    (41) date -> . PHRASE TIME PHRASE
    (42) date -> . PHRASE TIME AND NUMBER TIME
    (43) date -> . PHRASE TIME AND WORD_NUMBER TIME
    (44) date -> . NUMBER TIME AND NUMBER TIME PHRASE
    (45) date -> . NUMBER TIME AND WORD_NUMBER TIME PHRASE
    (46) date -> . WORD_NUMBER TIME AND NUMBER TIME PHRASE
    (47) date -> . WORD_NUMBER TIME AND WORD_NUMBER TIME PHRASE
    (82) date_day -> . DAY
    (83) date_day -> . ON DAY
    (84) date_day -> . PHRASE DAY
    (85) date_day -> . PAST_PHRASE DAY

  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for WORD_NUMBER resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for TIME resolved as shift
  ! shift/reduce conflict for PHRASE resolved as shift
    $end            reduce using rule 4 (date_list -> date .)
    NUMBER          shift and go to state 35
    WORD_NUMBER     shift and go to state 36
    AT              shift and go to state 37
    TIME            shift and go to state 21
    PHRASE          shift and go to state 41
    DAY             shift and go to state 28
    ON              shift and go to state 42
    PAST_PHRASE     shift and go to state 43

  ! NUMBER          [ reduce using rule 4 (date_list -> date .) ]
  ! WORD_NUMBER     [ reduce using rule 4 (date_list -> date .) ]
  ! AT              [ reduce using rule 4 (date_list -> date .) ]
  ! TIME            [ reduce using rule 4 (date_list -> date .) ]
  ! PHRASE          [ reduce using rule 4 (date_list -> date .) ]

    date                           shift and go to state 39
    date_day                       shift and go to state 40

state 4

    (5) date_list -> date_past .

    NUMBER          reduce using rule 5 (date_list -> date_past .)
    WORD_NUMBER     reduce using rule 5 (date_list -> date_past .)
    AT              reduce using rule 5 (date_list -> date_past .)
    TIME            reduce using rule 5 (date_list -> date_past .)
    PHRASE          reduce using rule 5 (date_list -> date_past .)
    $end            reduce using rule 5 (date_list -> date_past .)


state 5

    (6) date_list -> in .

    NUMBER          reduce using rule 6 (date_list -> in .)
    WORD_NUMBER     reduce using rule 6 (date_list -> in .)
    AT              reduce using rule 6 (date_list -> in .)
    TIME            reduce using rule 6 (date_list -> in .)
    PHRASE          reduce using rule 6 (date_list -> in .)
    $end            reduce using rule 6 (date_list -> in .)


state 6

    (7) date_list -> adder .

    NUMBER          reduce using rule 7 (date_list -> adder .)
    WORD_NUMBER     reduce using rule 7 (date_list -> adder .)
    AT              reduce using rule 7 (date_list -> adder .)
    TIME            reduce using rule 7 (date_list -> adder .)
    PHRASE          reduce using rule 7 (date_list -> adder .)
    $end            reduce using rule 7 (date_list -> adder .)


state 7

    (8) date_list -> remover .

    NUMBER          reduce using rule 8 (date_list -> remover .)
    WORD_NUMBER     reduce using rule 8 (date_list -> remover .)
    AT              reduce using rule 8 (date_list -> remover .)
    TIME            reduce using rule 8 (date_list -> remover .)
    PHRASE          reduce using rule 8 (date_list -> remover .)
    $end            reduce using rule 8 (date_list -> remover .)


state 8

    (9) date_list -> date_yesterday .

    NUMBER          reduce using rule 9 (date_list -> date_yesterday .)
    WORD_NUMBER     reduce using rule 9 (date_list -> date_yesterday .)
    AT              reduce using rule 9 (date_list -> date_yesterday .)
    TIME            reduce using rule 9 (date_list -> date_yesterday .)
    PHRASE          reduce using rule 9 (date_list -> date_yesterday .)
    $end            reduce using rule 9 (date_list -> date_yesterday .)


state 9

    (10) date_list -> date_2moro .

    NUMBER          reduce using rule 10 (date_list -> date_2moro .)
    WORD_NUMBER     reduce using rule 10 (date_list -> date_2moro .)
    AT              reduce using rule 10 (date_list -> date_2moro .)
    TIME            reduce using rule 10 (date_list -> date_2moro .)
    PHRASE          reduce using rule 10 (date_list -> date_2moro .)
    $end            reduce using rule 10 (date_list -> date_2moro .)


state 10

    (11) date_list -> date_day .
    (49) date_twice -> date_day . date
    (26) date -> . NUMBER
    (27) date -> . WORD_NUMBER
    (28) date -> . AT NUMBER
    (29) date -> . AT WORD_NUMBER
    (30) date -> . TIME
    (31) date -> . NUMBER TIME
    (32) date -> . NUMBER AM
    (33) date -> . NUMBER PM
    (34) date -> . AT NUMBER AM
    (35) date -> . AT NUMBER PM
    (36) date -> . WORD_NUMBER TIME
    (37) date -> . PHRASE TIME
    (38) date -> . TIME PHRASE
    (39) date -> . NUMBER TIME PHRASE
    (40) date -> . WORD_NUMBER TIME PHRASE
    (41) date -> . PHRASE TIME PHRASE
    (42) date -> . PHRASE TIME AND NUMBER TIME
    (43) date -> . PHRASE TIME AND WORD_NUMBER TIME
    (44) date -> . NUMBER TIME AND NUMBER TIME PHRASE
    (45) date -> . NUMBER TIME AND WORD_NUMBER TIME PHRASE
    (46) date -> . WORD_NUMBER TIME AND NUMBER TIME PHRASE
    (47) date -> . WORD_NUMBER TIME AND WORD_NUMBER TIME PHRASE

  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for WORD_NUMBER resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for TIME resolved as shift
  ! shift/reduce conflict for PHRASE resolved as shift
    $end            reduce using rule 11 (date_list -> date_day .)
    NUMBER          shift and go to state 35
    WORD_NUMBER     shift and go to state 36
    AT              shift and go to state 37
    TIME            shift and go to state 21
    PHRASE          shift and go to state 38

  ! NUMBER          [ reduce using rule 11 (date_list -> date_day .) ]
  ! WORD_NUMBER     [ reduce using rule 11 (date_list -> date_day .) ]
  ! AT              [ reduce using rule 11 (date_list -> date_day .) ]
  ! TIME            [ reduce using rule 11 (date_list -> date_day .) ]
  ! PHRASE          [ reduce using rule 11 (date_list -> date_day .) ]

    date                           shift and go to state 44

state 11

    (12) date_list -> date_end .

    NUMBER          reduce using rule 12 (date_list -> date_end .)
    WORD_NUMBER     reduce using rule 12 (date_list -> date_end .)
    AT              reduce using rule 12 (date_list -> date_end .)
    TIME            reduce using rule 12 (date_list -> date_end .)
    PHRASE          reduce using rule 12 (date_list -> date_end .)
    $end            reduce using rule 12 (date_list -> date_end .)


state 12

    (13) date_list -> date_or .

    NUMBER          reduce using rule 13 (date_list -> date_or .)
    WORD_NUMBER     reduce using rule 13 (date_list -> date_or .)
    AT              reduce using rule 13 (date_list -> date_or .)
    TIME            reduce using rule 13 (date_list -> date_or .)
    PHRASE          reduce using rule 13 (date_list -> date_or .)
    $end            reduce using rule 13 (date_list -> date_or .)


state 13

    (14) date_list -> date_before_yesterday .

    NUMBER          reduce using rule 14 (date_list -> date_before_yesterday .)
    WORD_NUMBER     reduce using rule 14 (date_list -> date_before_yesterday .)
    AT              reduce using rule 14 (date_list -> date_before_yesterday .)
    TIME            reduce using rule 14 (date_list -> date_before_yesterday .)
    PHRASE          reduce using rule 14 (date_list -> date_before_yesterday .)
    $end            reduce using rule 14 (date_list -> date_before_yesterday .)


state 14

    (15) date_list -> date_after_tomorrow .

    NUMBER          reduce using rule 15 (date_list -> date_after_tomorrow .)
    WORD_NUMBER     reduce using rule 15 (date_list -> date_after_tomorrow .)
    AT              reduce using rule 15 (date_list -> date_after_tomorrow .)
    TIME            reduce using rule 15 (date_list -> date_after_tomorrow .)
    PHRASE          reduce using rule 15 (date_list -> date_after_tomorrow .)
    $end            reduce using rule 15 (date_list -> date_after_tomorrow .)


state 15

    (16) date_list -> date_twice .

    NUMBER          reduce using rule 16 (date_list -> date_twice .)
    WORD_NUMBER     reduce using rule 16 (date_list -> date_twice .)
    AT              reduce using rule 16 (date_list -> date_twice .)
    TIME            reduce using rule 16 (date_list -> date_twice .)
    PHRASE          reduce using rule 16 (date_list -> date_twice .)
    $end            reduce using rule 16 (date_list -> date_twice .)


state 16

    (17) date_list -> timestamp .
    (21) timestamp_adpt -> timestamp . AM
    (22) timestamp_adpt -> timestamp . PM

    NUMBER          reduce using rule 17 (date_list -> timestamp .)
    WORD_NUMBER     reduce using rule 17 (date_list -> timestamp .)
    AT              reduce using rule 17 (date_list -> timestamp .)
    TIME            reduce using rule 17 (date_list -> timestamp .)
    PHRASE          reduce using rule 17 (date_list -> timestamp .)
    $end            reduce using rule 17 (date_list -> timestamp .)
    AM              shift and go to state 45
    PM              shift and go to state 46


state 17

    (18) date_list -> timestamp_adpt .
    (51) date_twice -> timestamp_adpt . date_day
    (82) date_day -> . DAY
    (83) date_day -> . ON DAY
    (84) date_day -> . PHRASE DAY
    (85) date_day -> . PAST_PHRASE DAY

  ! shift/reduce conflict for PHRASE resolved as shift
    NUMBER          reduce using rule 18 (date_list -> timestamp_adpt .)
    WORD_NUMBER     reduce using rule 18 (date_list -> timestamp_adpt .)
    AT              reduce using rule 18 (date_list -> timestamp_adpt .)
    TIME            reduce using rule 18 (date_list -> timestamp_adpt .)
    $end            reduce using rule 18 (date_list -> timestamp_adpt .)
    DAY             shift and go to state 28
    ON              shift and go to state 42
    PHRASE          shift and go to state 48
    PAST_PHRASE     shift and go to state 43

  ! PHRASE          [ reduce using rule 18 (date_list -> timestamp_adpt .) ]

    date_day                       shift and go to state 47

state 18

    (26) date -> NUMBER .
    (31) date -> NUMBER . TIME
    (32) date -> NUMBER . AM
    (33) date -> NUMBER . PM
    (39) date -> NUMBER . TIME PHRASE
    (44) date -> NUMBER . TIME AND NUMBER TIME PHRASE
    (45) date -> NUMBER . TIME AND WORD_NUMBER TIME PHRASE
    (70) date_past -> NUMBER . TIME PAST_PHRASE
    (72) date_past -> NUMBER . TIME AND NUMBER TIME PAST_PHRASE
    (74) date_past -> NUMBER . TIME AND WORD_NUMBER TIME PAST_PHRASE
    (92) date_end -> NUMBER . DATE_END
    (95) date_end -> NUMBER . DATE_END OF MONTH
    (19) timestamp -> NUMBER . COLON NUMBER
    (20) timestamp -> NUMBER . COLON NUMBER COLON NUMBER

  ! shift/reduce conflict for TIME resolved as shift
    NUMBER          reduce using rule 26 (date -> NUMBER .)
    WORD_NUMBER     reduce using rule 26 (date -> NUMBER .)
    AT              reduce using rule 26 (date -> NUMBER .)
    PHRASE          reduce using rule 26 (date -> NUMBER .)
    DAY             reduce using rule 26 (date -> NUMBER .)
    ON              reduce using rule 26 (date -> NUMBER .)
    PAST_PHRASE     reduce using rule 26 (date -> NUMBER .)
    $end            reduce using rule 26 (date -> NUMBER .)
    TIME            shift and go to state 49
    AM              shift and go to state 50
    PM              shift and go to state 51
    DATE_END        shift and go to state 52
    COLON           shift and go to state 53

  ! TIME            [ reduce using rule 26 (date -> NUMBER .) ]


state 19

    (27) date -> WORD_NUMBER .
    (36) date -> WORD_NUMBER . TIME
    (40) date -> WORD_NUMBER . TIME PHRASE
    (46) date -> WORD_NUMBER . TIME AND NUMBER TIME PHRASE
    (47) date -> WORD_NUMBER . TIME AND WORD_NUMBER TIME PHRASE
    (71) date_past -> WORD_NUMBER . TIME PAST_PHRASE
    (73) date_past -> WORD_NUMBER . TIME AND NUMBER TIME PAST_PHRASE
    (75) date_past -> WORD_NUMBER . TIME AND WORD_NUMBER TIME PAST_PHRASE

  ! shift/reduce conflict for TIME resolved as shift
    NUMBER          reduce using rule 27 (date -> WORD_NUMBER .)
    WORD_NUMBER     reduce using rule 27 (date -> WORD_NUMBER .)
    AT              reduce using rule 27 (date -> WORD_NUMBER .)
    PHRASE          reduce using rule 27 (date -> WORD_NUMBER .)
    DAY             reduce using rule 27 (date -> WORD_NUMBER .)
    ON              reduce using rule 27 (date -> WORD_NUMBER .)
    PAST_PHRASE     reduce using rule 27 (date -> WORD_NUMBER .)
    $end            reduce using rule 27 (date -> WORD_NUMBER .)
    TIME            shift and go to state 54

  ! TIME            [ reduce using rule 27 (date -> WORD_NUMBER .) ]


state 20

    (28) date -> AT . NUMBER
    (29) date -> AT . WORD_NUMBER
    (34) date -> AT . NUMBER AM
    (35) date -> AT . NUMBER PM
    (23) timestamp_adpt -> AT . timestamp
    (24) timestamp_adpt -> AT . timestamp PM
    (25) timestamp_adpt -> AT . timestamp AM
    (19) timestamp -> . NUMBER COLON NUMBER
    (20) timestamp -> . NUMBER COLON NUMBER COLON NUMBER

    NUMBER          shift and go to state 55
    WORD_NUMBER     shift and go to state 56

    timestamp                      shift and go to state 57

state 21

    (30) date -> TIME .
    (38) date -> TIME . PHRASE

  ! shift/reduce conflict for PHRASE resolved as shift
    NUMBER          reduce using rule 30 (date -> TIME .)
    WORD_NUMBER     reduce using rule 30 (date -> TIME .)
    AT              reduce using rule 30 (date -> TIME .)
    TIME            reduce using rule 30 (date -> TIME .)
    DAY             reduce using rule 30 (date -> TIME .)
    ON              reduce using rule 30 (date -> TIME .)
    PAST_PHRASE     reduce using rule 30 (date -> TIME .)
    $end            reduce using rule 30 (date -> TIME .)
    PHRASE          shift and go to state 58

  ! PHRASE          [ reduce using rule 30 (date -> TIME .) ]


state 22

    (37) date -> PHRASE . TIME
    (41) date -> PHRASE . TIME PHRASE
    (42) date -> PHRASE . TIME AND NUMBER TIME
    (43) date -> PHRASE . TIME AND WORD_NUMBER TIME
    (52) in -> PHRASE . NUMBER TIME
    (53) in -> PHRASE . WORD_NUMBER TIME
    (54) in -> PHRASE . NUMBER TIME AND NUMBER TIME
    (55) in -> PHRASE . WORD_NUMBER TIME AND NUMBER TIME
    (56) in -> PHRASE . NUMBER TIME AND WORD_NUMBER TIME
    (57) in -> PHRASE . WORD_NUMBER TIME AND WORD_NUMBER TIME
    (84) date_day -> PHRASE . DAY

    TIME            shift and go to state 59
    NUMBER          shift and go to state 60
    WORD_NUMBER     shift and go to state 61
    DAY             shift and go to state 62


state 23

    (85) date_day -> PAST_PHRASE . DAY
    (86) date_or -> PAST_PHRASE . TIME

    DAY             shift and go to state 63
    TIME            shift and go to state 64


state 24

    (58) adder -> PLUS . NUMBER TIME
    (59) adder -> PLUS . WORD_NUMBER TIME
    (60) adder -> PLUS . NUMBER TIME AND NUMBER TIME
    (61) adder -> PLUS . WORD_NUMBER TIME AND NUMBER TIME
    (62) adder -> PLUS . NUMBER TIME AND WORD_NUMBER TIME
    (63) adder -> PLUS . WORD_NUMBER TIME AND WORD_NUMBER TIME

    NUMBER          shift and go to state 65
    WORD_NUMBER     shift and go to state 66


state 25

    (64) remover -> MINUS . NUMBER TIME
    (65) remover -> MINUS . WORD_NUMBER TIME
    (66) remover -> MINUS . NUMBER TIME AND NUMBER TIME
    (67) remover -> MINUS . WORD_NUMBER TIME AND NUMBER TIME
    (68) remover -> MINUS . NUMBER TIME AND WORD_NUMBER TIME
    (69) remover -> MINUS . WORD_NUMBER TIME AND WORD_NUMBER TIME

    NUMBER          shift and go to state 67
    WORD_NUMBER     shift and go to state 68


state 26

    (76) date_yesterday -> YESTERDAY .
    (77) date_yesterday -> YESTERDAY . AT NUMBER
    (78) date_yesterday -> YESTERDAY . AT WORD_NUMBER
